# Sensel-Morph-Liberation

./: .gitignore  LICENSE  README.md
docs/: communications_protocol.md  implementation_details.md  narrative.md  prior_art_survey.md
docs/third_party_archive/: README.md
p5js/sensel_morph_ws_receiver_p5v1/: README.md  index.html  sketch.js
p5js/sensel_morph_ws_receiver_p5v2/: README.md  index.html  sketch.js  style.css
processing/: README.md
processing/sensel_morph_capture_viewer/: Calibration.pde  Contacts.pde  FramePacket.pde  MorphDecode.pde  README.md  Render.pde  Settings.pde  Ui.pde  sensel_morph_capture_viewer.pde
processing/sensel_morph_osc_calibrator/: README.md  sensel_morph_osc_calibrator.pde
processing/sensel_morph_osc_receiver/: README.md  sensel_morph_osc_receiver.pde
processing/sensel_morph_osc_transmitter/: Contacts.pde  MorphDecode.pde  MorphSerial.pde  OscWriter.pde  README.md  Render.pde  Settings.pde  Ui.pde  sensel_morph_osc_transmitter.pde
processing/sensel_morph_syphon_osc_transmitter/: Calibration.pde  Interpolation.pde  MorphDecode.pde  README.md  RecorderPlayer.pde  Render.pde  Ui.pde  (+2 more)
python/: README.md  pyproject.toml  requirements.txt
python/tests/: test_decode_pressure.py  test_morph_capture.py  test_sensel_morph_led.py  test_sensel_morph_osc.py  test_sensel_morph_ws.py
python/tools/: decode_pressure.py  experiment_fit_ellipses.py  morph_capture.py  morph_capture_session.py  render_ellipse_fit_comparison.py  sensel_morph_led.py  sensel_morph_osc.py  sensel_morph_ws.py
touchdesigner/: sensel_morph_syphon_osc_receiver.toe
(+53 files in other folders)
